# claude-code-hackathon

./: .gitignore  CLAUDE.md  Makefile  PERSON_F.md  README.md  plan.md  presentation.html  requirements.txt
.claude/: settings.json
.claude/commands/: rebuild.md
.claude/hooks/: curated_gate.sh
.github/workflows/: ci.yml
acq_sunset/: catalog_customers.csv
backend/: pyproject.toml
backend/api/: __init__.py  main.py  models.py
backend/pipeline/: __init__.py  conform.py  ingest.py  match.py  normalize.py  quality.py  run.py  schemas.py
backend/tests/: golden_pairs.csv  test_matcher_eval.py  test_normalize.py
catalog/: README.md  customer.md
crm/: crm_contacts.csv
decisions/: 0001-lakehouse-on-duckdb.md  0002-three-level-claude-md-and-survivorship.md  0005-guardrails-in-code-preferences-in-prompts.md  ADR-0001-blueprint.md  ADR-003-entity-matching.md  ADR-004-guardrails.md
docs/: dq_rules.md  swarm.md  the-mess.md  the_mess.md
docs/catalog/: customer.md  sources.md
eval/: golden_pairs.csv  score_matcher.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
hooks/: block_curated_writes.py  curated_guard.py
mcp/: README.md  pyproject.toml  server.py
mcp/fabrikam_mcp/: __init__.py  server.py
mcp/tests/: test_server.py
pipeline/: __init__.py  common.py  conform.py  contracts.py  dq.py  ingest.py  matcher_prompt.md  profile.py  resolve.py
pipelines/: matcher_prompt.md
scripts/: report.py  run_pipeline.py
tests/: test_pipeline.py
warehouse/conformed/: CLAUDE.md
warehouse/curated/: CLAUDE.md
warehouse/raw/: CLAUDE.md
(+20 files in other folders)
