[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabrikam-backend"
version = "0.1.0"
description = "Fabrikam Single-Customer-View backend pipeline and API"
requires-python = ">=3.11"
authors = [{ name = "Fabrikam Hackathon Team" }]
dependencies = [
    "duckdb>=1.0",
    "polars>=1.0",
    "pyarrow>=15",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "phonenumbers>=8.13",
    "email-validator>=2.1",
    "rapidfuzz>=3.6",
    "charset-normalizer>=3.3",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fabrikam-pipeline = "pipeline.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
